--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -14,6 +14,7 @@
 \usepackage[scaled]{helvet} 
 \usepackage{listings} % Code
 \usepackage{amsthm}
+\usepackage{tabularx}
 % \usepackage{hyperref}
 
 
