--- a/src/tex/chapter_2.tex
+++ b/src/tex/chapter_2.tex
@@ -15,25 +15,52 @@
     Les équipes de recherche portent à elles seules près de 70\% de l’ensemble des projets de recherche réalisé à l’Université des Antilles.
     Des impacts environnementaux des sargasses, à l’étude de la durabilité des matériaux, en passant par les risques naturels majeurs et les transitions énergétiques, climatiques et écologiques, la Faculté des Sciences est porteuse de projets innovants. 
 
-    \vspace{2cm}
+    % \vspace{1cm}
 
     \section{L'Equipe de la Biologie de la Mangrove}
     L'équipe \textbf{Biologie de la Mangrove} fait partie intégrante de l'UMR 7205 MNHN CNRS-Sorbonne Université-UA <<Institut de Systématique, Evolution, Biodiversité>> dirigée par \underline{Philippe Grandcolas}.
 
     \vspace{0.5cm}
 
-    Elle représente l'une des 19 équipes constituant actuellement cette UMR qui est répartie sur 2 sites (Paris et Guadeloupe). L'équipe \textbf{Biologie de la Mangrove} est composée exclusivement de personnels de l'Université des Antilles et est localisée en Guadeloupe sur le campus de Fouillole.
+    \begin{flushleft}
+        Elle représente l'une des 19 équipes constituant actuellement cette UMR qui est répartie sur 2 sites (Paris et Guadeloupe). L'équipe \textbf{Biologie de la Mangrove} est composée exclusivement de personnels de l'Université des Antilles et est localisée en Guadeloupe sur le campus de Fouillole.
 
-    \vspace{0.5cm}
+        \vspace{0.5cm}
+        
+        L'équipe de la Biologie de la Mangrove intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneurs en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès.
     
-    L'équipe de la Biologie de la Mangrove intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneurs en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès.
+        \vspace{0.5cm}
+    
+        Mon tuteur en entreprise durant le stage est Monsieur \underline{Olivier GROS} responsable de l'équipe Biologie de la Mangrove et Professeur des Universités.
+        Les étapes de développement de l'application est validée par Monsieur \underline{Manuel CLERGUE} également Professeur et chercheur à l'Université des Antilles.
+        Les membres de l'équipe projet Monsieur \underline{Matheiu BONNEAU} intervenant Mathématique et Madame \underline{SUZANNE} doctorante et la stagiaire en Biologie qui aura la gestion des expériences.
+
+    \end{flushleft}
+
 
     \section{Ressources fournies}
     Plusieurs ressources m'ont été fournies dans le cadre de mon stage.
     Dans un premier temps, j'ai reçu le matériel permettant l'acquisition vidéo qui sera abordé dans la section 4.2.
     Une connexion filaire au réseau de l'Université des Antilles a été fournie pour me permettant d'installer des mise à jour de logiciels.
 
-    \section{Contraintes particulières}
-    Le matériel ayant été commandé avant le début de mon stage est ma contrainte principale.
-    De ce fait, j'ai du faire preuve d'adaptation et faire au mieux avec les ressources fournies.
-    N'ayant pas le contrôle sur le matériel, afin qu'il soit purement adapté aux besoins des biologistes.
+    \section{Organisation du stage}
+    Tout au long du stage, des réunions régulières on été organisées avec mon encadrant Monsieur \underline{Manuel CLERGUE} afin de faire le point sur l'avancement du projet.
+
+    \begin{flushleft}
+        Le travail a été répartie en deux axes :
+        % Première partie en laboratoire
+        % Seconde partie sur le terrain 
+        \begin{itemize}
+            \item  \textbf{Partie en laboratoire}
+            \item  \textbf{Partie sur le terrain}
+        \end{itemize}
+        
+        \vspace{0.5cm}      
+    \end{flushleft}
+
+    \section{Contraintes particulière}
+    Durant ce stage j'ai eu deux contraintes particulières :
+    \begin{itemize}
+        \item  Premièrement, le matériel ayant été commandé avant le début de mon stage et des différents aspects techniques.
+        \item  Deuxièmement, le calendrier stricte en début de stage demandant un système minimal en 10 jours.
+    \end{itemize}
