--- a/src/tex/definition.tex
+++ b/src/tex/definition.tex
@@ -1,8 +1,13 @@
 \begin{definition}
-    \newcommand{\lab}[1]{(\ref{#1})}
-    CSI : Camera Serial Interface (signifiant en anglais interface série pour caméra, CSI) est un standard d'interface électronique entre une caméra (un capteur ou une source vidéo) et un microprocesseur.
-    % \label{def:csi}
 
+    CSI : Camera Serial Interface (signifiant en anglais interface série pour caméra, CSI) est un standard d'interface électronique entre une caméra (un capteur ou une source vidéo) et un microprocesseur.
+    
 \end{definition}
 
+\begin{definition}
+    Overclocking : L'overclocking, ou parfois sur-cadencement1, ou surcadençage est une manipulation ayant pour but d'augmenter la fréquence du signal d'horloge d'un processeur au-delà de la fréquence nominale afin d'augmenter les performances de l'ordinateur.
+\end{definition}
 
+\begin{definition}
+    CSI : La Camera Serial Interface (signifiant en anglais interface série pour caméra, CSI) ou encore MIPI-CSI est un standard d'interface électronique entre une caméra (un capteur ou une source vidéo) et un microprocesseur, défini par le MiPi.
+\end{definition}
