--- a/src/tex/chapter_3.tex
+++ b/src/tex/chapter_3.tex
@@ -4,7 +4,7 @@
 
     % \vspace{0.5cm}
 
-    \section{Présentation de l'aspect biologistes}
+    \section{Présentation de l'aspect biologiste}
     Les \textbf{Gerridés} sont une famille d'insectes de l'ordre des Hémiptères et du sous-ordre des Hétéroptères c'est-à-dire des punaises.
     \begin{figure}[ht]
         \centering
@@ -16,24 +16,20 @@
 
     \begin{flushleft}
         Les membres de cette famille sont communément appelés araignées d’eau, mais ce sont des insectes, on ne peut donc pas parler d'araignées. Cette appellation vient sans doute du fait de leurs longues pattes. Leur capacité à se déplacer sur l'eau leur vaut aussi le nom de patineurs de l'eau.\\[0.1cm]
-        
-        J'ai eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper a l'épuisette (voir Figure 3.2).
 
-        \begin{figure}[ht]
-            \centering
-            \includegraphics[scale=0.05]{mangrove.jpeg}
-            \caption{Mangrove de la Guadeloupe}
-        \end{figure}
-
-
+        Afin de déterminer leur préférence, il est nécessaire d'avoir un dispositif adéquat de capture vidéo pour l'acquisition de données.
     \end{flushleft}
+        
+        % J'ai eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper a l'épuisette (voir Figure 3.2).
 
-    \vspace{0.2cm}
+        % \begin{figure}[ht]
+        %     \centering
+        %     \includegraphics[scale=0.05]{mangrove.jpeg}
+        %     \caption{Mangrove de la Guadeloupe}
+        % \end{figure}
 
-    Afin de déterminer leur préférence, il est nécessaire d'avoir un dispositif adéquat de capture vidéo pour l'acquisition de données.
-
-    \vspace{0.5cm}
-
+    \subsection{Positionnement du travail dans le projet}
+    
     \begin{flushleft}
         Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au dessus du bac et ensuite devaient la rettirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était fonctionnel et leur permettait de réaliser des captures vidéo mais ils leur fallait placé le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.\\[0.2cm]
         
@@ -43,7 +39,8 @@
 
         Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.\\[0.2cm]
 
-        Ce qui nous peremets d'enchainer sur l'objectif qui en découlent.
+        % Transition provisoire ()
+        Ce qui nous peremets d'enchainer sur l'objectif qui en découlent, comment nous pourront améliorer le dispositif.
 
     \end{flushleft}
 
@@ -52,14 +49,18 @@
     % Pourquoi : Avant c'était fait à la main et c'est pas très efficace.
 
     \section{Objectifs}
-    % Voir pour mettre cette partie dans 'Mon Travail' 4.1.
-    L'objectifs du stage est de réaliser l'installation et de configurer un dispositif de capture vidéo réalisé par un \textit{Raspberry Pi} ainsi que de développer une application conviviale pour la gestion des vidéos.
-
-    \vspace{0.1cm}
-
-    \begin{flushleft}
-        Le dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence cela limitera les divers déplacements.\\[0.2cm]                
     
+    \begin{flushleft}
+        L’objectifs du stage est de réaliser l’installation et de configurer un dispositif de capture vidéo réalisé par un Raspberry Pi ainsi que de développer une application conviviale pour la gestion des vidéos.
+        \\[0.2cm]
+
+        Il sera donc question de permettre au biologiste de réaliser des captures vidéo de manière plus pratique.
+        A defaut d'avoir un dispositif non-fixe comme énoncé, nous réaliserons un dispositif qui sera fixe.\\[0.2cm]
+
+        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voir supprimer les divers déplacements.\\[0.2cm]                
+        
+        Une application conviviale sera développée afin de permettre au biologiste de réaliser des captures vidéo plus facilement.\\[0.2cm]
+
         Avec un écran nous pourront interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.\\[0.2cm]
 
         Ainsi avec l'application nous pourront avoir une prévisualisation de la capture vidéo.\\[0.2cm]
@@ -68,5 +69,6 @@
 
         Il sera également possible de visualiser les capture vidéos enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.\\[0.2cm]
 
+        % Transition provisoire ()
         Voyons maintenant comment faire.
     \end{flushleft}
