--- a/src/tex/definition.tex
+++ b/src/tex/definition.tex
@@ -9,5 +9,17 @@
 \end{definition}
 
 \begin{definition}
-    CSI : La Camera Serial Interface (signifiant en anglais interface série pour caméra, CSI) ou encore MIPI-CSI est un standard d'interface électronique entre une caméra (un capteur ou une source vidéo) et un microprocesseur, défini par le MiPi.
+    Paradigme : Un paradigme de programmation est une façon d'approcher la programmation informatique et de traiter les solutions aux problèmes et leur formulation dans un langage de programmation approprié.
+\end{definition}
+
+\begin{definition}
+    OS : Un système d'exploitation (ou système d'exploitation) est un ensemble de programmes et d'outils qui permettent d'exécuter des programmes sur un ordinateur.
+\end{definition}
+
+\begin{definition}
+    API : L'API (Application Programming Interface) est une interface de programmation qui permet d'accéder à des fonctionnalités d'un logiciel.
+\end{definition}
+
+\begin{definition}
+    GUI : La GUI (Graphical User Interface) est une interface utilisateur graphique qui permet d'interagir avec un logiciel.
 \end{definition}
